# yume-nes

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: bus.h  cartridge.h  cpu.h  cpu_bus.h  instruction.h  mapper_nrom.h  memory.h  ppu.h  ppu_bus.h  renderer.h  system.h
include/cartridge/: cartridge.h  mapper_nrom.h
include/cpu/: cpu.h  cpu_bus.h  instruction.h
include/ppu/: ppu.h  ppu_bus.h  renderer.h
include/system/: controller.h  system.h
src/: bus.cpp  cartridge.cpp  cpu.cpp  cpu_bus.cpp  instruction.cpp  mapper_nrom.cpp  memory.cpp  ppu.cpp  ppu_bus.cpp  system.cpp
src/cartridge/: cartridge.cpp  mapper_nrom.cpp
src/cpu/: cpu.cpp  cpu_bus.cpp
src/ppu/: ppu.cpp  ppu_bus.cpp  renderer.cpp
src/system/: controller.cpp  system.cpp
test/: Makefile  test_main.cpp  test_main.h  ut_bus_cpu_memory_connection.cpp  ut_cpu_hard_reset.cpp  ut_cpu_implied_opcodes_behaviour.cpp  ut_cpu_status_register.cpp
test/cartridge_tests/: cartridge_tests.h  ut_cartridge_header_decoding.cpp  ut_cartridge_header_load_test.cpp
test/cpu_tests/: cpu_tests.h  ut_cpu_absolute_opcodes_behaviour.cpp  ut_cpu_absolute_opcodes_flags.cpp  ut_cpu_absolute_x_opcodes_behaviour.cpp  ut_cpu_absolute_x_opcodes_flags.cpp  ut_cpu_absolute_y_opcodes_behaviour.cpp  ut_cpu_absolute_y_opcodes_flags.cpp  ut_cpu_accumulator_opcodes_behaviour.cpp  ut_cpu_accumulator_opcodes_flags.cpp  ut_cpu_boot_and_reset.cpp  ut_cpu_bus_memory_connection.cpp  ut_cpu_connection_with_components.cpp  ut_cpu_cycle_correctness.cpp  ut_cpu_exec_cycle_correctness.cpp  ut_cpu_hard_reset.cpp  (+14 more)
(+26 files in other folders)
